...
<resources>
    <string name="app_name">&appName;</string>
    <string name="app_logo_alt">&companyName; Logo</string>
    <string name="about_logged_in">Logged in as: %1$s</string>
    <string name="about_not_logged_in">Not logged in</string>

    <string name="menu_download">Download Courses</string>
    <string name="menu_language">Change language</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_read_aloud">Read aloud</string>
    <string name="menu_return_to_courses">Return to courses</string>
    <string name="menu_scorecard">Scorecard</string>
    <string name="menu_search">Search</string>
    <string name="menu_stop_read_aloud">Stop reading</string>
    <string name="menu_sort_by">Sort by</string>
    <string name="menu_sort_by_course">Sort by course</string>
    <string name="menu_sort_by_filename">Sort by filename</string>
    <string name="menu_select_all">Select all</string>

...
    <string name="widget_quiz_feedback_feedback_title">Feedback: </string>
    <string name="widget_quiz_unavailable_section">You must complete all the previous activities in this section before this quiz becomes available to you.</string>
    <string name="widget_quiz_unavailable_course">You must complete all the previous activities in this course before this quiz becomes available to you.</string>
    <string name="widget_quiz_unavailable_attempts">You have already attempted this quiz the max number of times allowed</string>
    <string name="widget_resource_open_file">Open \'%1$s\'</string>

    <string name="course_context_reset">Reset</string>
    <string name="course_context_delete">Delete</string>
    <string name="course_context_update_activity">Update activity</string>
    <string name="course_context_reset_confirm">Are you sure you want to reset this course? It will remove all the progress logs for this course.</string>
    <string name="course_context_delete_confirm">Are you sure you want to delete this course? It will completely remove the course from your phone.</string>

    <string name="no_courses">There are no courses currently installed</string>
    <string name="more_courses">Download more courses</string>

...
    <string name="register_form_password_again_title">Password (again)</string>
    <string name="register_form_phoneno_title">Phone number</string>
    <string name="register_btn_text">Register</string>

    <string name="reset_username_title">Username or Email</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="info">Info</string>
    <string name="warning">Warning</string>
    <string name="loading">Loading</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="download">Download</string>
    <string name="downloaded">Downloaded</string>
    <string name="open">Open</string>
    <string name="storage_default">Default</string>

...
    <string name="info_scan_media_checking">Checking for: %1$s</string>
    <string name="info_scan_media_missing">Some media files are missing for your courses.</string>
    <string name="info_scan_course_media_missing">Some media files are missing for this course.</string>

    <string name="info_upgrading">Upgrading to %1$s</string>
    <string name="course_updating">Updating course activity…</string>
    <string name="course_updating_success">\'%1$s\': Course activity updated successfully</string>
    <string name="course_updating_error">\'%1$s\': Error updating course</string>
    <string name="course_deleting">Deleting course…</string>
    <string name="course_deleting_success">Course deleted successfully</string>
    <string name="course_deleting_error">Error deleting course</string>
    <string name="info.startup.preloaded_accounts">Preloaded %1$d new user(s).</string>

    <string name="loading_courses">Loading courses</string>
    <string name="loading_points">Loading points &#8230;</string>
    <string name="loading_badges">Loading badges &#8230;</string>

    <string name="info_no_badges">You don\'t have any badges yet. Complete a full course to earn your first badge.</string>

    <string name="scan_media_download_button">Download</string>
    <string name="success_media_download">Media file: \'%1$s\' successfully downloaded.</string>
    <string name="media_file_size">%1$.1fMb</string>
    <string name="missing_media_download_selected">Download selected</string>
    <string name="missing_media_stop_selected">Stop selected</string>
...
    <string name="register_complete">Successfully registered</string>

    <string name="reset_alert_title">Reset</string>
    <string name="reset_process">Resetting password …</string>
    <string name="reset_complete">Your password has now been reset.\n\nPlease check your email for your new password.</string>

    <string name="change_language">Change Language</string>

    <string name="course_draft">Draft version</string>

    <string name="search.activity_title">Search</string>
    <string name="search.result_summary">%1$d results for \"%2$s\"</string>
    <string name="search.message.searching">Searching…</string>
...
